apps/versitygw/k8s.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: versitygw
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: versitygw
  template:
    metadata:
      labels:
        app.kubernetes.io/name: versitygw
    spec:
      containers:
        - name: versitygw
          image: ghcr.io/versity/versitygw:v1.8.0
          #image: forge.geekbundle.org/madic/versitygw:ldap-selfsigned
          imagePullPolicy: IfNotPresent
          args: ["posix", "/data"]
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 7070
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 7070
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          volumeMounts:
            - mountPath: /data
              name: data
      nodeSelector:
        node-role/workload: zfs
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: local-path-versitygw
---
apiVersion: v1
kind: Service
metadata:
  name: versitygw
  labels:
      app.kubernetes.io/name: versitygw
spec:
  selector:
    app.kubernetes.io/name: versitygw
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 7070
  type: ClusterIP
