apps/versitygw/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: versitygw
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
    labels:
        app.kubernetes.io/name: versitygw
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:IrPxHFgGFDqvNNSuJiupFazHvQ==,iv:jBTxGhvaeO1XzH2QKAZmgiSqq9Ae4+X6Cszi9KT0eSU=,tag:yErAx8D1gTKJuT9DGeITFQ==,type:str]
          secretName: wildcard-cloudflare-production-01
    rules:
        - host: ENC[AES256_GCM,data:8+hredFXteeIVhTOcT4R8Eafkg==,iv:zzU6JzkSltQZ68fBVNiVih1+AStR/ztY5V/sUx6OT/M=,tag:4Z2h3k4boj+mX2RtG6oBqQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: versitygw
                        port:
                            number: 7070
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3QXVuQUxaOWlqbVdHam9Y
[...]
            bswn2r4vH7aCEAyWks45k2tZtS1iuMOnT9OoGvjN6xq6l97/2xxFDg==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQVWNSTTY3N041RXZucjgy
[...]
            ELoWtEXidc+zKjIMNqxqwL2+yuHpPIAfDfgfX3DjPNHH90DbV1PXgw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-08-13T19:00:38Z"
    mac: ENC[AES256_GCM,data:9dOzFzLHcyveKLdHeNHfnpCze3WpULCFQ5HK9KLZRGRAoTfGUvkd/daZylZ0SJUL33F+6ZCuABENAYnDgkDfsZcSJsyzzmaKkVftVSqYtC4yD+zYaxcB4U3E2I9hrJmBuO8v1yPd92Ff88o86cAMBfXo2jfuhS3pzjaeYWldxDw=,iv:319hWYgyl5cUXVtOpfgXnDQC0Y+S0PaNjLeakxAT7jo=,tag:knhCpk+5AnghnYeKeimg5Q==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.10.2
